# CompetiTour

./: .env.example  .gitignore  CompetiTour_Implementation_Plan.md  Makefile  PRODUCT_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  fix_typography.py  walkthrough.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  packages.py  router.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: __init__.py  analysis_job.py  competitiveness_report.py  component_match.py  dmc_package.py  ota_listing.py  ota_platform.py  package_component.py  scrape_session.py  source_market.py  user.py
backend/app/schemas/: __init__.py  auth.py  job.py  package.py  report.py
backend/workers/: worker.py
docs/: architecture.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/billing/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/notifications/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/landing/: GlobeView.tsx
frontend/src/components/layout/: AdminPageWrapper.tsx  AdminSidebar.tsx  AdminTopBar.tsx  PageWrapper.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/lib/: api.ts  quota.ts  types.ts  utils.ts
nginx/: default.conf
scripts/: demo-setup.sh  init-db.sh
(+7 files in other folders)
